--- a/app/src/main/res/layout/mp_card_progress.xml
+++ b/app/src/main/res/layout/mp_card_progress.xml
@@ -30,13 +30,14 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
             android:focusable="auto"
             android:progress="70"
             app:layout_constraintBottom_toTopOf="@+id/tv_goal_percentage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_set_goal" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_my_progress_title"
@@ -84,6 +85,16 @@
             app:layout_constraintBottom_toTopOf="@+id/tv_goal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_set_goal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_more_horiz_black_24dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
