--- a/app/src/main/res/layout/mh_card_view.xml
+++ b/app/src/main/res/layout/mh_card_view.xml
@@ -12,11 +12,12 @@
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="20dp"
+            android:layout_height="10dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:progress="50"
+            android:progressDrawable="@drawable/mh_progress_bar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_progress_value" />
