--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -55,7 +55,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:textColor="@color/colorPrimaryText"
-                        android:text="@string/stats_card_title" />
+                        android:text="@string/mp_stats_card_title" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_stats"
@@ -96,7 +96,7 @@
                         android:id="@+id/tv_card_history_title"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/history_card_title"
+                        android:text="@string/mp_history_card_title"
                         android:textSize="16sp"
                         android:textColor="@color/colorPrimaryText"
                         android:layout_marginTop="8dp"
