--- a/app/src/main/res/layout/mp_card_progress.xml
+++ b/app/src/main/res/layout/mp_card_progress.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/smoke_free_label"
+            android:text="@string/mp_smoke_free_label"
             android:textSize="22sp"
             android:textColor="@color/colorPrimaryText"
             app:layout_constraintBottom_toTopOf="@id/tv_progress_value"
