--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/trophiesFragment"
-        android:icon="@drawable/nav_ic_progress"
-        android:title="[TROPHIES]" />
+        android:icon="@drawable/ic_stars_black_24dp"
+        android:title="@string/nav_trophies_title" />
     <item
         android:id="@+id/progressFragment"
         android:icon="@drawable/nav_ic_progress"
-        android:title="[PROGRESS]" />
+        android:title="@string/nav_progress_title" />
     <item
         android:id="@+id/healthFragment"
-        android:icon="@drawable/nav_ic_progress"
-        android:title="[HEALTH]" />
+        android:icon="@drawable/ic_health_black_24dp"
+        android:title="@string/nav_health_title" />
 </menu>
