--- a/app/src/main/res/menu/menu_toolbar_actions_main.xml
+++ b/app/src/main/res/menu/menu_toolbar_actions_main.xml
@@ -4,5 +4,5 @@
 
     <item
         android:id="@+id/settingsActivity"
-        android:title="[Settings]" />
+        android:title="@string/menu_settings_title" />
 </menu>
