--- a/app/src/main/res/menu/menu_toolbar_actions_main.xml
+++ b/app/src/main/res/menu/menu_toolbar_actions_main.xml
@@ -2,7 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/settingsActivity"
-        android:title="@string/menu_settings_title" />
+    <group android:id="@+id/group_settings">
+        <item
+            android:id="@+id/settingsFragment"
+            android:title="@string/menu_settings_title" />
+    </group>
+
 </menu>
