--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,32 +8,28 @@
     <fragment
         android:id="@+id/progressFragment"
         android:name="com.example.sampleapp.ui.ProgressFragment"
-        android:label="fragment_progress"
-        tools:layout="@layout/fragment_progress" >
-        <action
-            android:id="@+id/action_progressFragment_to_settingsActivity"
-            app:destination="@id/settingsActivity" />
-    </fragment>
+        android:label="@string/"
+        tools:layout="@layout/fragment_progress" />
+
     <fragment
         android:id="@+id/healthFragment"
         android:name="com.example.sampleapp.ui.health.HealthFragment"
         android:label="fragment_health"
-        tools:layout="@layout/fragment_health" >
-        <action
-            android:id="@+id/action_healthFragment_to_settingsActivity"
-            app:destination="@id/settingsActivity" />
-    </fragment>
+        tools:layout="@layout/fragment_health" />
+
     <fragment
         android:id="@+id/trophiesFragment"
         android:name="com.example.sampleapp.ui.trophies.TrophiesFragment"
         android:label="fragment_trophies"
-        tools:layout="@layout/fragment_trophies" >
-        <action
-            android:id="@+id/action_trophiesFragment_to_settingsActivity"
-            app:destination="@id/settingsActivity" />
-    </fragment>
-    <activity
-        android:id="@+id/settingsActivity"
-        android:name="com.example.sampleapp.SettingsActivity"
-        android:label="SettingsActivity" />
+        tools:layout="@layout/fragment_trophies" />
+
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.sampleapp.ui.settings.SettingsFragment"
+        android:label="SettingsFragment" />
+
+    <action
+        android:id="@+id/action_global_settingsFragment"
+        app:destination="@id/settingsFragment" />
+
 </navigation>
