--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,10 +26,17 @@
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.example.sampleapp.ui.settings.SettingsFragment"
-        android:label="SettingsFragment" />
+        android:label="SettingsFragment"
+        tools:layout="@layout/fragment_settings" />
 
     <action
         android:id="@+id/action_global_settingsFragment"
         app:destination="@id/settingsFragment" />
+
+    <action
+        android:id="@+id/action_global_inclusive_settingsFragment"
+        app:destination="@id/settingsFragment"
+        app:popUpTo="@id/progressFragment"
+        app:popUpToInclusive="true" />
 
 </navigation>
